# Dashboard

./: .gitattributes  .gitignore  .gitmodules  Pipfile  README.md  StrainMappingNetCDF.py  combined.py  converter.py  credits.txt  environment.yml  holoviz.ipynb  instruments.py  launcher.py  live.py  parametrized.ipynb  pyproject.toml  scripted.ipynb  setup.py  upgrader.py
RASHG/: CalibrationPlots.py  HSLoad.py  NetCDF_Xarray_test.ipynb  PowerCalib1.py  RASHG_functions.py  README.md  VPimaging_Experiment_wavelength_dep_P_dep_Voltage_Tagged.py  __init__.py  gui.py  instruments_RASHG.py  instruments_base.py  instruments_random.py
config/: environment.yml  import_config.csv  lab.json  requirements.txt  requirements_pypy.txt
dashboard/: combined.py  consoleUtilities.py  console_utilities.py  converter.py  utils.py
dashboard/ensembles/: __init__.py  dashboard.py  ensemblebase.py  gui.py  instruments.md
dashboard/ensembles/rashg/: ensemble_Calib.py  ensemble_RASHG.py  ensemble_RASHG_PID.py
dashboard/ensembles/stellarnet/: ensemble_Stellarnet.py
dashboard/instruments/: __init__.py  dashboard.py  ensemblebase.py  gui.py  instruments.md  instruments_base.py  instrumentsbase.py
dashboard/instruments/RASHG/: instruments_Calib.py  instruments_RASHG.py  instruments_RASHG_PID.py  instruments_Stellarnet.py  instruments_random_RASHG.py
dashboard/instruments/rashg/: ensemble_Calib.py  ensemble_RASHG.py  ensemble_RASHG_PID.py  instruments_Calib.py  instruments_RASHG.py  instruments_RASHG_PID.py
dashboard/instruments/stellarnet/: instruments_Stellarnet.py
dashboard/visualizer/: __init__.py  utils.py  visualizer.py
dashboard/visualizer/RASHG/: calib.py  sixD.py  visualizer_calib.py  visualizer_sixD.py
dashboard/visualizer/rashg/: visualizer_calib.py  visualizer_sixD.py
dashboard/visualizer/stellarnet/: visualizer_stellarnet.py
doc/: ensembles.md  old.md  pypy.md
instruments/: __init__.py  dashboard.py  gui.py  instruments.py  instruments_base.py
instruments/RASHG/: RASHG_functions.py  README.md  iac.py  instruments_Calib.py  instruments_RASHG.py  instruments_RASHG_PID.py  instruments_base.py  instruments_random_RASHG.py  instruments_scanimage.py  rotator.py
neogidashboard/: combined.py  console_utilities.py  utils.py
neogidashboard/ensembles/: __init__.py  ensemblebase.py  gui.py
neogidashboard/ensembles/rashg/: ensemble_RASHG.py
neogidashboard/ensembles/stellarnet/: ensemble_Stellarnet.py
neogidashboard/visualizer/: __init__.py  visualizer.py  visualizer_base.py
neogidashboard/visualizer/rashg/: visualizer_calib.py  visualizer_sixD.py
neogidashboard/visualizer/stellarnet/: visualizer_stellarnet.py
scripted/: combined.py  fiveD.py  grapher3D.py  launcher.py  utils.py
utils/: func.py  importer.py
visualizer/: __init__.py  fiveD.py  grapher3D.py  sixD.py  utils.py  visualizer.py
visualizer/RASHG/: sixD.py
