[tool.poetry]
name = "Dashboard"
version = "0.1.0"
description = "Dashboard for visualizing data"
authors = ["bageljr <aryanagarwal897@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.2.5"
numpy = "^1.21.0"
h5netcdf = "^0.11.0"
panel = "^0.11.3"
bokeh = "^2.3.2"
xarray = "^0.18.2"
hvplot = "^0.7.2"
dask = "^2021.6.2"
colorcet = "^2.0.6"
plotly = "^5.0.0"
zarr = "^2.3"
k10cr1 = { git = 'https://github.com/QuantumQuadrate/k10cr1' }
elliptec = { git = 'https://github.com/UNTNeogiLab/TL-rotation-control' }
stellarnet = { git = "git@github.com:UNTNeogiLab/stellarnet.git", branch = "main"}
pyvcam = { git ="git@github.com:UNTNeogiLab/pyvcam.git", branch = "master", optional = true}
typing-extensions = "^3.10.0"
scipy = "^1.7.0"
numba = "^0.53.1"
netCDF4 = "^1.5.7"
neogiinstruments = "^2.4.0"
matplotlib = "^3.4.2"
simple-pid = "^1.0.1"
[tool.poetry.extras]
pyvcam = ["pyvcam"]

[tool.poetry.scripts]
dashboard = "dashboard.combined:main"
converter = "converter.converter:main"

[tool.poetry.dev-dependencies]
ipympl = "^0.7.0"
ipykernel = "^5.5.5"
ipywidgets = "^7.6.3"
dask-labextension = "^5.0.2"
bpytop = "^1.0.67"
selenium = "^3.141.0"
pip-licenses = "^3.4.0"
jupyter-bokeh = "^3.0.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
