[tool.poetry]
name = "neogiDashboard"
version = "0.1.0"
description = "Dashboard for visualizing data"
authors = ["bageljr <aryanagarwal897@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.6"
pandas = "^1.2.5"
numpy = "^1.21.0"
panel = "^0.11.3"
bokeh = "^2.3.2"
xarray = "^0.18.2"
hvplot = "^0.7.2"
dask = { extras = ["distributed"], version = "^2021.7.0" }
colorcet = "^2.0.6"
plotly = "^5.0.0"
zarr = "^2.3"
typing-extensions = "^3.10.0"
scipy = "^1.7.0"
numba = "^0.53.1"
netCDF4 = "^1.5.7"
neogiinstruments = "^2.6.0"
matplotlib = "^3.4.2"
simple-pid = "^1.0.1"


[tool.poetry.scripts]
dashboard = "neogidashboard.combined:main"
converter = "neogidashboard.console_utilities:convert"
clean = "dashboard.console_utilities:clean"
[tool.poetry.dev-dependencies]
bpytop = "^1.0.67"
pip-licenses = "^3.4.0"
Sphinx = "^4.1.1"
k10cr1 = { git = 'https://github.com/QuantumQuadrate/k10cr1' }
elliptec = { git = 'https://github.com/UNTNeogiLab/TL-rotation-control' }
stellarnet = { git = "git@github.com:UNTNeogiLab/stellarnet.git", branch = "main" }
pyvcam = { git = "git@github.com:UNTNeogiLab/pyvcam.git", branch = "master" }
pylint = "^2.9.6"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
